--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -7,12 +7,16 @@
   <uses-sdk android:targetSdkVersion="16" android:minSdkVersion="10"/>
 
   <application android:label="@string/app_name" >
-    <activity android:name="scaloid.main.HelloScaloid"
+    <activity android:name="scaloid.main.MainActivity"
               android:label="@string/app_name">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
+    </activity>
+    <activity android:name="scaloid.main.PlayActivity"
+              android:label="@string/app_name">
+
     </activity>
   </application>
 
